# multi_output_sca

./: .gitignore  01_data_prep.ipynb  02_train_cnnmo.ipynb  03_debug_labels.ipynb  MLP_MO_Attack.ipynb  README.md  agent.md  cnn_context.md  cnn_mo_sca.ipynb  main.py  mlp_mo_sca.ipynb  mlpmp_SCA.ipynb  new_reqs.md  notebook_structure.md  pyproject.toml  requirements.txt  test_masking.py  venv - Copy
.devcontainer/: devcontainer.json
Research/: reqs.md
checkpoints/: experiments.json  experiments.json.corrupted
dataset/: ascadv2-extracted.h5
demo/: demo.ipynb
src/: cnn_model.py  config.py  experiment.py  model.py  utils.py
